AOP support added
Added logging aop in the app.

--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,6 @@
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-web</artifactId>
-	    <version>5.3.23</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-webmvc</artifactId>
 	    <version>5.3.23</version>
 	</dependency>
@@ -60,7 +55,13 @@
 	    <version>5.3.23</version>
 	</dependency>
 
-	
+	<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+	<dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjweaver</artifactId>
+	    <version>1.9.9.1</version>
+	</dependency>
+
 	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
 	    <groupId>org.hibernate</groupId>
@@ -96,7 +97,6 @@
 	    <version>1.18.24</version>
 	    <scope>provided</scope>
 	</dependency>
-
 
   </dependencies>
 </project>
